Commit PR suggestion
Co-authored-by: Chris B <cbieneman@microsoft.com>

--- a/specs/language/basic.tex
+++ b/specs/language/basic.tex
@@ -3,7 +3,7 @@
 \begin{note}
   \p A significant portion of HLSL semantics is inherited from C and C++. Some
   of this is a result of intentional adoption of syntax early in the development
-  of the language and some a side-effect of Clang-based implementation of DXC.
+  of the language and some a side-effect of the Clang-based implementation of DXC.
 
   \p This chapter includes a lot of definitions that are inherited from C and C++.
   Some are identical to C or C++, others are slightly different. HLSL is neither
