Reword per PR feedback

--- a/specs/language/basic.tex
+++ b/specs/language/basic.tex
@@ -1,8 +1,8 @@
 \Ch{Basic Concepts}{Basic}
 
 \begin{note}
-  \p A significant portion of HLSL semantics is inherited from C and C++. Some
-  of this is a result of intentional adoption of syntax early in the development
+  \p HLSL inherits a significant portion of its language semantics from C and C++.
+  Some of this is a result of intentional adoption of syntax early in the development
   of the language and some a side-effect of the Clang-based implementation of DXC.
 
   \p This chapter includes a lot of definitions that are inherited from C and C++.
