--- a/specs/language/conversions.tex
+++ b/specs/language/conversions.tex
@@ -5,13 +5,11 @@ chapter enumerates the full set of conversions. A \textit{standard conversion
 sequence} is a sequence of standard conversions in the following
 order:
 \begin{enumerate}
-  \item Zero or one conversion of either lvalue-to-rvalue, array-to-pointer or
-  function-to-pointer.
+  \item Zero or one conversion of either lvalue-to-rvalue, or array-to-pointer.
   \item Zero or one conversion of either integral conversion, floating point
   conversion, floating point-integral conversion, or boolean conversion,
-  derived-to-base-lvalue, vector splat, vector truncation, or flat
-  conversion\footnote{This differs from C++ with the addition of
-  vector splat and truncation casting and flat conversions.}.
+  derived-to-base-lvalue, vector splat, vector truncation. \footnote{This
+  differs from C++ with the addition of vector splat and truncation casting.}.
   \item Zero or one conversion of either component-wise integral conversion,
   component-wise floating point conversion, component-wise floating
   point-integral conversion, or component-wise boolean
@@ -37,11 +35,12 @@ to a copy of the array, not memory referred to by the glvalue.
 
 \Sec{Array-to-pointer conversion}{Conv.array}
 
-\p An lvalue or rvalue of type \texttt{T[N]} (constant-sized array), can be
-converted to a prvalue of type pointer to \texttt{T}.
-[\textit{Note: \acrshort{hlsl} does not support grammar for specifying pointer or
-reference types, however they are used in the type system and must be described
-in language rules.}]
+\p An lvalue or rvalue of type \texttt{T[]} (unsized array), can be converted to
+a prvalue of type pointer to \texttt{T}\footnote{\acrshort{hlsl} does not
+support grammar for specifying pointer or reference types, however they are used
+in the type system and must be described in language
+rules.}\footnote{Array-to-pointer conversion of constant sized arrays is not
+supported.}.
 
 \Sec{Integral conversion}{Conv.iconv}
 
