--- a/specs/language/placeholders.tex
+++ b/specs/language/placeholders.tex
@@ -15,5 +15,6 @@
 \Sec{Conversions}{Classes.Conversions}
 \Ch{Templates}{Template}
 \Sec{Template Instantiation}{Template.Inst}
+\Sec{Partial Ordering of Function Templates}{Template.Func.Order}
 \Ch{Intangible Types}{Intangible}
 \Ch{Runtime}{Runtime}
