A bit of wordsmithing (#240)
* A bit of wordsmithing

Co-authored-by: Chris B <cbieneman@microsoft.com>

--- a/specs/language/basic.tex
+++ b/specs/language/basic.tex
@@ -1,15 +1,14 @@
 \Ch{Basic Concepts}{Basic}
 
 \begin{note}
-  \p HLSL inherits a great deal if its behavior from C and C++. Some of that was
-  intentional by aligning syntax early in the development of the language, some
-  of it was a side effect of DXC being implemented on top of Clang.
+  \p HLSL inherits a significant portion of its language semantics from C and C++.
+  Some of this is a result of intentional adoption of syntax early in the development
+  of the language and some a side-effect of the Clang-based implementation of DXC.
 
   \p This chapter includes a lot of definitions that are inherited from C and C++.
   Some are identical to C or C++, others are slightly different. HLSL is neither
   a subset nor a superset of C or C++, and cannot be simply described in terms
-  of C or C++. This specification includes all definitions for clarity to the
-  reader.
+  of C or C++. This specification includes all necessary definitions for clarity.
 \end{note}
 
 \Sec{Preamble}{Basic.preamble}
