Create files for Statements and Declarations; add note about default linkage

--- a/specs/language/hlsl.tex
+++ b/specs/language/hlsl.tex
@@ -89,6 +89,8 @@
 \input{conversions}
 \input{expressions}
 \input{overloading}
+\input{statements}
+\input{declarations}
 
 \input{placeholders} % Declare placeholder references
 
