Minor fixes, mostly typos

--- a/specs/language/basic.tex
+++ b/specs/language/basic.tex
@@ -80,7 +80,7 @@ external in HLSL.},
 \item or a \textit{using-directive} (\ref{Decl}).
 \end{itemize}
 
-\p The two examples below is adapted from \gls{isoCPP} \textbf{[basic.def]}. All
+\p The two examples below are adapted from \gls{isoCPP} \textbf{[basic.def]}. All
 but one of the following are definitions:
 \begin{HLSL}
 int f(int x) { return x+1; } // defines f and x
@@ -146,7 +146,7 @@ representation, as such the size is unknown at compile time.
 % precision types should be intangible.
 
 \p A class type \texttt{T} is an \textit{intangible class type} if it contains
-an base classes or members of intangible class type, standard intangible type,
+a base class or members of intangible class type, standard intangible type,
 or arrays of such types. Standard intangible types and intangible class types
 are collectively called \textit{intangible types}(\ref{Intangible}).
 
