--- a/specs/language/introduction.tex
+++ b/specs/language/introduction.tex
@@ -203,7 +203,7 @@ elements.
 
 \SubSub{\gls{lane} States}{Intro.Model.Terms.LaneState}
 
-\p \gls{lane}s may be in three primary states: \textit{active}, \textit{helper},
+\p \gls{lane}s may be in four primary states: \textit{active}, \textit{helper},
 \textit{inactive}, and \textit{predicated off}.
 
 \p An \textit{active} \gls{lane} is enabled to perform computations and produce
