Simplify conversion sequences and overload scoring
This change is a shift in how conversion sequences and overload scoring
is handled to disambiguate a few cases that DXC handles today through
simpler rules.

The main cases relate to scoring conversion sequences with dimension
adjustment conversions. With this change an implicit conversion sequence
is now defined as:

* Value conversion (lvalue to rvalue or array decay)
* Data conversion (int/float/bool/struct promotion or conversion)
* Dimension conversion (splat or truncate)
* CV qualifier conversion (add const)

Conversion sequences are still assigned the rank of their "highest"
conversion following the same chart as before where the ranks are:

* Exact Match
* Extension
* Promotion
* Conversion
* Truncation

There is an added rule that if two conversion sequences are both of rank
*Promotion* or "Conversion" and one contains an *Extension* but the
other does not, the conversion without the *Extension* is the better
conversion sequence.

Given these rules:

ICS(float -> double) > ICS(float -> double3)
ICS(float -> double3) > ICS(float -> half)
ICS(float -> double2) == ICS(float -> dobule3)
ICS(float -> half) > ICS(float -> half3)
ICS(float4 -> double3) > ICS(float4 -> half3)
ICS(float4 -> double4) > ICS(float4 -> float2)
ICS(float4 -> half4) > ICS(float4 -> float2)

--- a/specs/language/conversions.tex
+++ b/specs/language/conversions.tex
@@ -8,13 +8,11 @@ order:
   \item Zero or one conversion of either lvalue-to-rvalue, or array-to-pointer.
   \item Zero or one conversion of either integral conversion, floating point
   conversion, floating point-integral conversion, or boolean conversion,
-  derived-to-base-lvalue, vector splat, vector truncation. \footnote{This
-  differs from C++ with the addition of vector splat and truncation casting.}.
-  \item Zero or one conversion of either component-wise integral conversion,
-  component-wise floating point conversion, component-wise floating
-  point-integral conversion, or component-wise boolean
-  conversion\footnote{C++ does not support this conversion in the sequence for
-  component-wise conversion of vector and matrix types.}.
+  derived-to-base-lvalue, or flat conversion\footnote{This differs from C++ with
+  the addition of flat conversion.}.
+  \item Zero or one conversion of scalar-vector splat, or vector/matrix
+  truncation. \footnote{C++ does not support dimension altering conversions for
+  scalar, vector or matrix types.}.
   \item Zero or one qualification conversion.
 \end{enumerate}
 
