--- a/specs/language/overloading.tex
+++ b/specs/language/overloading.tex
@@ -339,4 +339,8 @@ rules applies:
     \item conversion of \texttt{B} to \texttt{A} is better than conversion of
     \texttt{C} to \texttt{A}.
   \end{itemize}
+  \item If \(ICS(f)\) and \(ICS(f`')\) are both \textbf{Promotion} or
+  \textbf{Conversion} ranked, and \(ICS(f)\) contains an \textbf{Extension}
+  conversion, but \(ICS(f`')\) does not contain an \textbf{Extension},
+  \(ICS(f`')\) is the better conversion than \(ICS(f')\).
 \end{itemize}
