--- a/specs/language/declarations.tex
+++ b/specs/language/declarations.tex
@@ -66,9 +66,9 @@
 
 \p The \textit{export-declaration-group} declaration cannot appear directly or indirectly within an unnamed namespace.
 
-\p Functions with \textit{external linkage} can also be decladed with an \texttt{export} specifier (\ref{Decl.Spec.Fct}).
+\p Functions with \textit{external linkage} can also be declared with an \texttt{export} specifier (\ref{Decl.Spec.Fct}).
 
-\p If a function is part of \textit{export-declaration-group} then all redeclarations of the same function must also be part on a \textit{export-declaration-group} or be declared with an \texttt{export} specifier (\ref{Decl.Spec.Fct}).
+\p If a function is part of an \textit{export-declaration-group} then all redeclarations of the same function must also be part on a \textit{export-declaration-group} or be declared with an \texttt{export} specifier (\ref{Decl.Spec.Fct}).
 
 \Sec{Linkage}{Decl.Linkage}
 
